--- a/Prode/frontend/prode-app/resultados.html
+++ b/Prode/frontend/prode-app/resultados.html
@@ -35,6 +35,7 @@
 
   <nav class="navbar navbar-expand-lg bg-dark">
     <div class="container-fluid">
+      <img src="assets/images/logo-navbar.png" style="width: 40px;" alt="">
         <a class="navbar-brand" style="color: white">Prode8</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
             aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -52,12 +53,12 @@
 </nav>
 <br>
 <br>
-<img src="assets/images/fondologin-1-648x360.png" class="imagen">
+<img src="assets/images/fondo-login.png" style="width: 500px;" class="imagen">
 
     <!-- OVERVIEW -->
 <div class="texto">
     <div class="texto">
-        <h3 class="panel-title">Tus resultados</h3>
+        <h3 id="texto-resultados" class="panel-title">Tus resultados</h3>
         <br>
         <br>
     </div>
