--- a/Prode/frontend/prode-app/fasefinal.html
+++ b/Prode/frontend/prode-app/fasefinal.html
@@ -64,8 +64,7 @@
                             </figure>
                         </td>
                         <td>
-                            <input type="number" id="goles_equipo_local_P49"
-                            style="width : 30px">
+                            <input type="number" id="goles_equipo_local_P49" style="width : 30px">
                             <span class="fecha">03/12</span> 
                             <span  class="hora">12:00</span>
                             <input type="number" id="goles_equipo_visitante_P49" style="width : 30px">
@@ -149,7 +148,7 @@
                             <figure>
                                 <span>1ºB</span>
                                 <img src=""
-                            alt="1ºB" style="width : 80px">
+                                alt="1ºB" style="width : 80px">
                             </figure>
                         </td>
                         <td 
@@ -160,8 +159,8 @@
                             <input type="number" id="goles_equipo_visitante_P53" style="width : 30px">
                         </td>
                         <td class="visitante">
-                            <span>2ºA</span>
                             <figure>
+                                <span>2ºA</span>
                                 <img src=""
                                 alt="2ºA" style="width : 80px">
                             </figure>
@@ -170,21 +169,20 @@
                     <tr>
                         <td class="local" id="P54">
                             <figure>
-                                <span class="equipo_t369">1ºD</span>
+                                <span>1ºD</span>
                                 <img src=""
                                 alt="1ºD" style="width : 80px">
                             </figure>
                         </td>
                         <td class="resultado">
-                            <input type="number" id="goles_equipo_local_P54"
-                            style="width : 30px">
+                            <input type="number" id="goles_equipo_local_P54" style="width : 30px">
                             <span class="fecha">04/12</span> 
-                            <span class="hora">16:00</span><input type="number"
-                            id="goles_equipo_visitante_P54" style="width : 30px">
+                            <span class="hora">16:00</span>
+                            <input type="number" id="goles_equipo_visitante_P54" style="width : 30px">
                         </td>
                         <td class="visitante">
-                            <span>2ºC</span>
                             <figure>
+                                <span>2ºC</span>
                                 <img src=""
                                 alt="2ºC" style="width : 80px">
                             </figure>
@@ -202,10 +200,11 @@
                             <input type="number" id="goles_equipo_local_P55" style="width : 30px">
                             <span class="fecha">06/12</span> 
                             <span class="hora">12:00</span>
-                            <input type="number" id="goles_equipo_visitante_P55" style="width : 30px"></td>
+                            <input type="number" id="goles_equipo_visitante_P55" style="width : 30px">
+                        </td>
                         <td class="visitante">
-                            <span>2ºE</span>
                             <figure>
+                                <span>2ºE</span>
                                 <img src=""
                                 alt="2ºE" style="width : 80px">
                             </figure>
@@ -226,8 +225,8 @@
                             <input type="number" id="goles_equipo_visitante_P56" style="width : 30px">
                         </td>
                         <td class="visitante">
-                            <span >2ºG</span>
-                            <figure>
+                            <figure></figure>
+                                <span >2ºG</span>
                                 <img src="" width="80"
                                 alt="2ºG" style="width : 80px" >
                             </figure>
@@ -262,8 +261,8 @@
                             <input type="number" id="goles_equipo_visitante_P57" style="width : 30px">
                         </td>
                         <td>
-                            <span>1°C-2°D</span>
                             <figure>
+                                <span>1°C-2°D</span>
                                 <img src=""
                                 alt="Países Bajos" style="width : 80px">
                             </figure>
@@ -284,8 +283,8 @@
                             <input type="number" id="goles_equipo_visitante_P58" style="width : 30px">
                         </td>
                         <td class="visitante">
-                            <span class="equipo_t1042">1°G-2°H</span>
                             <figure>
+                                <span class="equipo_t1042">1°G-2°H</span>
                                 <img src=""
                                 alt="Irán" style="width : 80px">
                             </figure>
@@ -307,8 +306,8 @@
                             id="goles_equipo_visitante_P59" style="width : 30px">
                         </td>
                         <td class="visitante">
-                            <span>1°D-2°C</span>
                             <figure>
+                                <span>1°D-2°C</span>
                                 <img src=""
                                 alt="Ecuador" style="width : 80px">
                             </figure>
@@ -327,11 +326,11 @@
                             <span class="fecha">10/12</span> 
                             <span class="hora">16:00</span>
                             <input type="number"
-                            id="goles_equipo_visitante_P60" style="width : 30px"
-                        ></td>
+                            id="goles_equipo_visitante_P60" style="width : 30px">
+                        </td>
                         <td class="visitante">
-                            <span class="equipo_t508">1°H-2°G</span>
                             <figure>
+                                <span class="equipo_t508">1°H-2°G</span>
                                 <img src=""
                                 alt="Gales" style="width : 80px">
                             </figure>
@@ -357,7 +356,7 @@
                         <td id="P61">
                             <figure>
                                 <span>Senegal</span>
-                                <img src="https://e00-marca.uecdn.es/assets/sports/logos/football/png/72x72/1226.png"
+                                <img src=""
                                 alt="Senegal" style="width : 80px">
                             </figure>
                         </td>
@@ -368,9 +367,9 @@
                             <input type="number" id="goles_equipo_visitante_P61" style="width : 30px">
                         </td>
                         <td>
-                            <span>Países Bajos</span>
                             <figure>
-                                <img src="https://e00-marca.uecdn.es/assets/sports/logos/football/png/72x72/366.png"
+                                <span>Países Bajos</span>
+                                <img src=""
                                 alt="Países Bajos" style="width : 80px">
                             </figure>
                         </td>
@@ -379,7 +378,7 @@
                         <td class="local" id="P62">
                             <figure>
                                 <span class="equipo_t114">Inglaterra</span>
-                                <img src="https://e00-marca.uecdn.es/assets/sports/logos/football/png/72x72/114.png"
+                                <img src=""
                                 alt="Inglaterra" style="width : 80px">
                             </figure>
                         </td>
@@ -391,9 +390,9 @@
                             id="goles_equipo_visitante_P62" style="width : 30px">
                         </td>
                         <td class="visitante">
-                            <span class="equipo_t1042">Irán</span>
                             <figure>
-                                <img src="https://e00-marca.uecdn.es/assets/sports/logos/football/png/72x72/1042.png"
+                                <span class="equipo_t1042">Irán</span>
+                                <img src=""
                                 alt="Irán" style="width : 80px">
                             </figure>
                         </td>
@@ -418,7 +417,7 @@
                         <td id="P63">
                         <figure>
                             <span>Senegal</span>
-                            <img src="https://e00-marca.uecdn.es/assets/sports/logos/football/png/72x72/1226.png"
+                            <img src=""
                             alt="Senegal" style="width : 80px">
                         </figure>
                         </td>
@@ -429,9 +428,9 @@
                             <input type="number" id="goles_equipo_visitante_P63" style="width : 30px">
                         </td>
                         <td>
-                            <span>Países Bajos</span>
                             <figure>
-                                <img src="https://e00-marca.uecdn.es/assets/sports/logos/football/png/72x72/366.png"
+                                <span>Países Bajos</span>
+                                <img src=""
                                 alt="Países Bajos" style="width : 80px">
                             </figure>
                         </td>
@@ -455,7 +454,7 @@
                         <td id="P64">
                             <figure>
                                 <span>Senegal</span>
-                                <img src="https://e00-marca.uecdn.es/assets/sports/logos/football/png/72x72/1226.png"
+                                <img src=""
                                 alt="Senegal" style="width : 80px">
                             </figure>
                         </td>
@@ -466,9 +465,9 @@
                             <input type="number" id="goles_equipo_visitante_P64" style="width : 30px">
                         </td>
                         <td>
-                            <span>Países Bajos</span>
                             <figure>
-                                <img src="https://e00-marca.uecdn.es/assets/sports/logos/football/png/72x72/366.png"
+                                <span>Países Bajos</span>
+                                <img src=""
                                 alt="Países Bajos" style="width : 80px">
                             </figure>
                         </td>
