--- a/Prode/frontend/prode-app/fasefinal.html
+++ b/Prode/frontend/prode-app/fasefinal.html
@@ -46,7 +46,7 @@
             <br>      
             <div class="col" > 
             <h2 class="tituloj1" style="color: white"> Octavos de Final</h2>
-            <table class="table table-dark table-striped" id="Octavos de final">
+            <table class="table table-dark table-striped" id="jornada1">
                 <thead>
                     <tr>
                         <th scope="col">Equipo local</th>
@@ -58,7 +58,7 @@
                     <tr>
                         <td class="local" id="P49" >
                             <figure>
-                                <span>1ºz</span>
+                                <span>1ºA</span>
                                 <img src=""
                                 alt="1ºA" >
                             </figure>
