--- a/Prode/frontend/prode-app/fasefinal.html
+++ b/Prode/frontend/prode-app/fasefinal.html
@@ -77,7 +77,8 @@
                             </figure>
                         </td>
                     </tr>
-                    <br>
+                    </tbody>
+                    </table>
                     <tr>
                         <td class="local" id="P50">
                             <figure>
