--- a/Prode/frontend/prode-app/fasefinal.html
+++ b/Prode/frontend/prode-app/fasefinal.html
@@ -79,6 +79,15 @@
                     </tr>
                     </tbody>
                     </table>
+                    <table class="table table-dark table-striped" id="jornada1">
+                        <thead>
+                            <tr>
+                                <th scope="col">Equipo local</th>
+                                <th scope="col">Resultado</th>
+                                <th scope="col">Equipo visitante</th>
+                            </tr>
+                        </thead>
+                        <tbody>
                     <tr>
                         <td class="local" id="P50">
                             <figure>
@@ -101,6 +110,8 @@
                             </figure>
                         </td>
                     </tr>
+                    </tbody>
+                    </table>
                     <tr>
                         <td class="local" id="P51">
                             <figure>
