--- a/Prode/frontend/prode-app/fasefinal.html
+++ b/Prode/frontend/prode-app/fasefinal.html
@@ -25,35 +25,34 @@
         <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
     </head>
     <body>
-            <nav class="navbar navbar-expand-lg bg-dark">
-                <div class="container-fluid">
-                    <a class="navbar-brand" style="color: white">Prode8</a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-                        aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                        <div class="navbar-nav">
-                            <a class="nav-link active" aria-current="page" style="color: white" href="fixture.html">Fixture</a>
-                            <a class="nav-link" style="color: white" href="main.html">Prode</a>
-                            <a class="nav-link" style="color: white" href="resultados.html">Resultados</a>
-                            <a class="nav-link" style="color: white" href="index.html">Cerrar Sesion</a>
-                        </div>
+        <nav class="navbar navbar-expand-lg bg-dark">
+            <div class="container-fluid">
+                <a class="navbar-brand" style="color: white">Prode8</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav">
+                        <a class="nav-link active" aria-current="page" style="color: white" href="fixture.html">Fixture</a>
+                        <a class="nav-link" style="color: white" href="main.html">Prode</a>
+                        <a class="nav-link" style="color: white" href="resultados.html">Resultados</a>
+                        <a class="nav-link" style="color: white" href="index.html">Cerrar Sesion</a>
                     </div>
                 </div>
-            </nav>   
-            <br>
-            <br>      
-            <div class="col" > 
-            <h2 class="tituloj1" style="color: white"> Octavos de Final</h2>
-            <table class="table table-dark table-striped" id="jornada1">
-                <thead>
-                    <tr>
-                        <th scope="col">Equipo local</th>
-                        <th scope="col">Resultado</th>
-                        <th scope="col">Equipo visitante</th>
-                    </tr>
-                </thead>
+            </div>
+        </nav>   
+        <br>
+        <br>      
+        <div class="col" > 
+        <h2 class="tituloj1" style="color: white"> Octavos de Final</h2>
+        <table class="table table-dark table-striped" id="jornada1">
+            <thead>
+                <tr>
+                    <th scope="col">Equipo local</th>
+                    <th scope="col">Resultado</th>
+                    <th scope="col">Equipo visitante</th>
+                </tr>
+            </thead>
                 <tbody>
                     <tr>
                         <td class="local" id="P49" >
@@ -112,6 +111,15 @@
                     </tr>
                     </tbody>
                     </table>
+                    <table class="table table-dark table-striped" id="jornada1">
+                        <thead>
+                            <tr>
+                                <th scope="col">Equipo local</th>
+                                <th scope="col">Resultado</th>
+                                <th scope="col">Equipo visitante</th>
+                            </tr>
+                        </thead>
+                            <tbody>
                     <tr>
                         <td class="local" id="P51">
                             <figure>
@@ -134,6 +142,17 @@
                             </figure>
                         </td>
                     </tr>
+                    </tbody>
+                    </table>
+                    <table class="table table-dark table-striped" id="jornada1">
+                        <thead>
+                            <tr>
+                                <th scope="col">Equipo local</th>
+                                <th scope="col">Resultado</th>
+                                <th scope="col">Equipo visitante</th>
+                            </tr>
+                        </thead>
+                            <tbody>
                     <tr>
                         <td class="local" id="P52">
                             <figure>
@@ -156,6 +175,17 @@
                             </figure>
                         </td>
                     </tr>
+                    </tbody>
+                    </table>
+                    <table class="table table-dark table-striped" id="jornada1">
+                        <thead>
+                            <tr>
+                                <th scope="col">Equipo local</th>
+                                <th scope="col">Resultado</th>
+                                <th scope="col">Equipo visitante</th>
+                            </tr>
+                        </thead>
+                            <tbody>
                     <tr>
                         <td class="local" id="P53">
                             <figure>
@@ -178,7 +208,18 @@
                                 alt="2ºA" style="width : 80px">
                             </figure>
                         </td>
-                    </tr>    
+                    </tr>
+                    </tbody>
+                    </table>
+                    <table class="table table-dark table-striped" id="jornada1">
+                        <thead>
+                            <tr>
+                                <th scope="col">Equipo local</th>
+                                <th scope="col">Resultado</th>
+                                <th scope="col">Equipo visitante</th>
+                            </tr>
+                        </thead>
+                            <tbody>    
                     <tr>
                         <td class="local" id="P54">
                             <figure>
@@ -201,6 +242,17 @@
                             </figure>
                         </td>           
                     </tr>
+                    </tbody>
+                    </table>
+                    <table class="table table-dark table-striped" id="jornada1">
+                        <thead>
+                            <tr>
+                                <th scope="col">Equipo local</th>
+                                <th scope="col">Resultado</th>
+                                <th scope="col">Equipo visitante</th>
+                            </tr>
+                        </thead>
+                            <tbody>
                     <tr>
                         <td class="local" id="P55">
                             <figure>
@@ -222,7 +274,18 @@
                                 alt="2ºE" style="width : 80px">
                             </figure>
                         </td>
-                    </tr>            
+                    </tr> 
+                    </tbody>
+                    </table>
+                    <table class="table table-dark table-striped" id="jornada1">
+                        <thead>
+                            <tr>
+                                <th scope="col">Equipo local</th>
+                                <th scope="col">Resultado</th>
+                                <th scope="col">Equipo visitante</th>
+                            </tr>
+                        </thead>
+                            <tbody>           
                     <tr>
                         <td class="local" id="P56">
                             <figure>
@@ -245,6 +308,8 @@
                             </figure>
                         </td>
                     </tr>
+                    </tbody>
+                    </table>
                 </tbody>
             </table>
         </div>        
