--- a/Prode/frontend/prode-app/fasefinal.html
+++ b/Prode/frontend/prode-app/fasefinal.html
@@ -44,15 +44,15 @@
         <br>
         <br>      
         <div class="col" > 
-        <h2 class="tituloj1" style="color: white"> Octavos de Final</h2>
-        <table class="table table-dark table-striped" id="jornada1">
-            <thead>
-                <tr>
-                    <th scope="col">Equipo local</th>
-                    <th scope="col">Resultado</th>
-                    <th scope="col">Equipo visitante</th>
-                </tr>
-            </thead>
+            <h2 class="tituloj1" style="color: white"> Octavos de Final</h2>
+            <table class="table table-dark table-striped" id="jornada1">
+                <thead>
+                    <tr>
+                        <th scope="col">Equipo local</th>
+                        <th scope="col">Resultado</th>
+                        <th scope="col">Equipo visitante</th>
+                    </tr>
+                </thead>
                 <tbody>
                     <tr>
                         <td class="local" id="P49" >
@@ -77,16 +77,16 @@
                         </td>
                     </tr>
                 </tbody>
-        </table>
-        <table class="table table-dark table-striped" id="jornada1">
-            <thead>
-                <tr>
-                    <th scope="col">Equipo local</th>
-                    <th scope="col">Resultado</th>
-                    <th scope="col">Equipo visitante</th>
-                </tr>
-            </thead>
-            <tbody>
+            </table>
+            <table class="table table-dark table-striped" id="jornada1">
+                <thead>
+                    <tr>
+                        <th scope="col">Equipo local</th>
+                        <th scope="col">Resultado</th>
+                        <th scope="col">Equipo visitante</th>
+                    </tr>
+                </thead>
+                <tbody>
                     <tr>
                         <td class="local" id="P50">
                             <figure>
@@ -109,8 +109,8 @@
                             </figure>
                         </td>
                     </tr>
-            </tbody>
-        </table>
+                </tbody>
+            </table>
             <table class="table table-dark table-striped" id="jornada1">
                 <thead>
                     <tr>
@@ -165,8 +165,8 @@
                             <input type="number" id="goles_equipo_local_P52" style="width : 30px">
                             <span class="fecha">05/12</span> 
                             <span class="hora">16:00</span>
-                            <input type="number" id="goles_equipo_visitante_P52" style="width : 30px"
-                        ></td>
+                            <input type="number" id="goles_equipo_visitante_P52" style="width : 30px">
+                        </td>
                         <td class="visitante">
                             <figure>
                                 <span>2ºH</span>
@@ -236,9 +236,9 @@
                         </td>
                         <td class="visitante">
                             <figure>
-                                <span>2ºC</span>
-                                <img src=""
-                                alt="2ºC" style="width : 80px">
+                            <span>2ºC</span>
+                            <img src=""
+                            alt="2ºC" style="width : 80px">
                             </figure>
                         </td>           
                     </tr>
@@ -293,7 +293,7 @@
                                 <img src=""
                                 alt="1ºH" style="width : 80px">
                             </figure>
-                            </td>
+                        </td>
                         <td class="resultado">
                             <input type="number" id="goles_equipo_local_P56" style="width : 30px">
                             <span class="fecha">06/12</span> 
@@ -310,11 +310,7 @@
                     </tr>
                 </tbody>
             </table>
-                
-        </div>  
-        <br>
-        <br>
-        <br>      
+        </div>
         <div class="col" > 
             <h2 class="tituloj1" style="color: white"> Cuartos de Final</h2>
             <table class="table table-dark table-striped"  style=" width: 420px;"  id="jornada1" 
