--- a/Prode/frontend/prode-app/fasefinal.html
+++ b/Prode/frontend/prode-app/fasefinal.html
@@ -344,6 +344,17 @@
                             </figure>
                         </td>
                     </tr>
+                </tbody>
+            </table>
+            <table class="table table-dark table-striped" id="jornada1">
+                <thead>
+                    <tr>
+                        <th scope="col">Equipo local</th>
+                        <th scope="col">Resultado</th>
+                        <th scope="col">Equipo visitante</th>
+                    </tr>
+                </thead>
+                <tbody>        
                     <tr>
                         <td class="local" id="P58">
                             <figure>
@@ -366,6 +377,17 @@
                             </figure>
                         </td>
                     </tr>
+                </tbody>  
+            </table>
+            <table class="table table-dark table-striped" id="jornada1">
+                <thead>
+                    <tr>
+                        <th scope="col">Equipo local</th>
+                        <th scope="col">Resultado</th>
+                        <th scope="col">Equipo visitante</th>
+                    </tr>
+                </thead>
+                <tbody>      
                     <tr>
                         <td class="local" id="P59">
                             <figure>
@@ -389,6 +411,17 @@
                             </figure>
                         </td>
                     </tr>
+                </tbody>
+            </table>
+            <table class="table table-dark table-striped" id="jornada1">
+                <thead>
+                    <tr>
+                        <th scope="col">Equipo local</th>
+                        <th scope="col">Resultado</th>
+                        <th scope="col">Equipo visitante</th>
+                    </tr>
+                </thead>
+                <tbody>        
                     <tr>
                         <td class="local" id="P60">
                             <figure>
