--- a/Prode/frontend/prode-app/fasefinal.html
+++ b/Prode/frontend/prode-app/fasefinal.html
@@ -312,8 +312,8 @@
             </table>
         </div>
         <div class="col" > 
-            <h2 class="tituloj1" style="color: white"> Cuartos de Final</h2>
-            <table class="table table-dark table-striped"  style=" width: 420px;"  id="jornada1" 
+            <h2 class="tituloj1" style="color: white" > Cuartos de Final</h2>
+            <table class="table table-dark table-striped"  style=" width: 420px;" style="margin-right:5px"  id="jornada1" 
                 summary="Todos los resultados de la jornada">
                 <thead>
                     <tr>
