--- a/Prode/frontend/prode-app/fasefinal.html
+++ b/Prode/frontend/prode-app/fasefinal.html
@@ -311,9 +311,9 @@
                 </tbody>
             </table>
         </div>
-        <div class="col" > 
+        <div class="col" style="margin-right:5px"> 
             <h2 class="tituloj1" style="color: white" > Cuartos de Final</h2>
-            <table class="table table-dark table-striped"  style=" width: 420px;" style="margin-right:5px"  id="jornada1" 
+            <table class="table table-dark table-striped"  style=" width: 420px;"   id="jornada1" 
                 summary="Todos los resultados de la jornada">
                 <thead>
                     <tr>
