--- a/Prode/frontend/prode-app/fasefinal.html
+++ b/Prode/frontend/prode-app/fasefinal.html
@@ -311,8 +311,12 @@
                 </tbody>
             </table>
         </div>
-        <div class="col" style="margin-right:410px"> 
+        <div id="container" class="container-fluid" style="margin-left:500px" >
+        <div class="col" > 
             <h2 class="tituloj1" style="color: white" > Cuartos de Final</h2>
+            <br>
+            <br>
+            <br>
             <table class="table table-dark table-striped"  style=" width: 420px;"   id="jornada1" 
                 summary="Todos los resultados de la jornada">
                 <thead>
@@ -447,7 +451,9 @@
                     </tr>
                 </tbody>
             </table>
-        </div>                     
+        </div>
+        </div>
+        <div id="container" class="container-fluid" style="margin-left:500px" >                     
         <div class="col" > 
             <h2 class="tituloj1" style="color: white"> Semifinal</h2>
             <table class="table table-dark table-striped"  style=" width: 420px;"  id="jornada1" 
@@ -518,7 +524,8 @@
                     </tr>
                 </tbody>
             </table>
-        </div>              
+        </div> 
+        </div>             
         <div class="col" > 
             <h2 class="tituloj1" style="color: white"> 3º y 4º puesto</h2>
             <table class="table table-dark table-striped"  style=" width: 420px;"  id="jornada1" 
