--- a/Prode/frontend/prode-app/fasefinal.html
+++ b/Prode/frontend/prode-app/fasefinal.html
@@ -564,7 +564,8 @@
                 </tbody>
             </table>   
         </div>
-        </div>         
+        </div>
+        <div id="container" class="container-fluid" style="margin-left:2000px">      
         <div class="col" > 
             <h2 class="tituloj1" style="color: white"> Final </h2>
             <table class="table table-dark table-striped"  style=" width: 420px;"  id="jornada1" 
@@ -601,6 +602,7 @@
                     </tr>
                 </tbody>
             </table>
+        </div>
         </div> 
     </body>                
 </html>                                                    
