--- a/Prode/frontend/prode-app/fasefinal2.html
+++ b/Prode/frontend/prode-app/fasefinal2.html
@@ -25,15 +25,16 @@
                 </div>
             </div>
         </nav>
+        <div class="container-fluid">
         <div class="container">
             <div class="row">
-                <div class="col-sm">
+                <div class="col-sm" style="">
                     <h2 class="tituloj1" style="color: rgb(0, 0, 0)"> Octavos de Final</h2>
                     <table class="table table-dark table-striped"  style="width: 450px">
                         <thead>
                             <tr>
                                 <th scope="col">Local</th>
-                                <th > Resultado</th>
+                                <th scope="col"> Resultado</th>
                                 <th scope="col">Visitante</th>
                             </tr>
                         </thead>
@@ -262,7 +263,7 @@
                         </tbody>
                     </table>
                 </div>
-                <div class="col-sm">
+                <div class="col-sm" style="margin-left:2000px">
                     <h2 class="tituloj1" style="color: rgb(0, 0, 0)" > Cuartos de Final</h2>
                     <table class="table table-dark table-striped"  style=" width: 420px;"   id="jornada1" 
                         summary="Todos los resultados de la jornada">
@@ -475,6 +476,7 @@
                 </div>
             </div> <!--ROW-->
         </div><!--CONTAINER-->
+        </div>
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js" integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous"></script> 
     </body>
