--- a/Prode/frontend/prode-app/main.html
+++ b/Prode/frontend/prode-app/main.html
@@ -44,40 +44,38 @@
                 </div>
             </div>
         </nav>
-        <section data-bs-version="5.1" class="image3 cid-t9oYmfD7bT mbr-fullscreen" id="image3-1z">
-            <div id="container" class="container-fluid">
-                <div class="col" > 
-                    <table class="table table-dark table-striped"  style=" width: 420px;"  id="jornada1" summary="Todos los resultados de la jornada">
-                        <thead>
+        <section data-bs-version="5.1" class="image3 cid-t9oYmfD7bT mbr-fullscreen" >
+            <table class="table table-dark table-striped"  style=" width: 420px;"  id="jornada1" >
+                    <thead>
                             <tr>
                                 <th scope="col">Equipo local</th>
                                 <th scope="col">Jornada 1 <br>Resultado</th>
                                 <th scope="col">Equipo visitante</th>
                             </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td id="P1">
+                    </thead>
+                    <tbody>
+                        <tr>
+                             <td id="P1">
                                     <figure>
                                         <span>Senegal</span>
                                         <img src="https://e00-marca.uecdn.es/assets/sports/logos/football/png/72x72/1226.png" alt="Senegal" style="width : 80px">
                                     </figure>
-                                </td>
-                                <td>
+                            </td>
+                            <td>
                                     <span class="fecha"> 21/11  </span> <span class="hora">7:00 </span>
                                     <br><br>
                                     <input type="number" id="goles_equipo_local_P1" style="width : 30px">
                                     <span> - </span>
                                     <input type="number" id="goles_equipo_visitante_P1" style="width : 30px">
-                                </td>
-                                <td>
+                            </td>
+                            <td>
                                     <figure>
                                         <span>Países Bajos</span>
                                         <img src="https://e00-marca.uecdn.es/assets/sports/logos/football/png/72x72/366.png" alt="Países Bajos" style="width : 80px">
                                     </figure>
-                                </td>
-                            </tr>
-                            <tr>
+                            </td>
+                        </tr>
+                        <tr>
                                 <td class="local" id="P2">
                                     <figure>
                                         <span class="equipo_t114">Inglaterra</span>
@@ -97,29 +95,29 @@
                                         <img src="https://e00-marca.uecdn.es/assets/sports/logos/football/png/72x72/1042.png" alt="Irán" style="width : 80px">
                                     </figure>
                                 </td>
-                            </tr>
-                            <tr>
-                                <td class="local" id="P3">
+                        </tr>
+                        <tr>
+                            <td class="local" id="P3">
                                     <figure>
                                         <span class="equipo_t1873">Qatar</span>
                                         <img src="https://e00-marca.uecdn.es/assets/sports/logos/football/png/72x72/1873.png" alt="Qatar" style="width : 80px">
                                     </figure>
-                                </td>
-                                <td class="resultado">
+                            </td>
+                            <td class="resultado">
                                     <span class="fecha">21/11</span> <span class="hora">13:00</span>
                                     <br><br>
                                     <input type="number" id="goles_equipo_local_P3" style="width : 30px">
                                     <span> - </span>
                                     <input type="number" id="goles_equipo_visitante_P3" style="width : 30px">
-                                </td>
-                                <td class="visitante">
+                            </td>
+                            <td class="visitante">
                                     <span class="equipo_t830">Ecuador</span>
                                     <figure>
                                         <img src="https://e00-marca.uecdn.es/assets/sports/logos/football/png/72x72/830.png" alt="Ecuador" style="width : 80px">
                                     </figure>
-                                </td>
-                            </tr>
-                            <tr>
+                            </td>
+                        </tr>
+                        <tr>
                                 <td class="local" id="P4">
                                     <figure>
                                         <span class="equipo_t596">Estados Unidos</span>
@@ -138,8 +136,8 @@
                                         <img src="https://e00-marca.uecdn.es/assets/sports/logos/football/png/72x72/508.png" alt="Gales" style="width : 80px">
                                     </figure>
                                 </td>
-                            </tr>
-                            <tr>
+                        </tr>
+                        <tr>
                                 <td class="local" id="P5">
                                     <figure>
                                         <span class="equipo_t632">Argentina</span>
@@ -159,8 +157,8 @@
                                         <img src="https://e00-marca.uecdn.es/assets/sports/logos/football/png/72x72/1264.png" alt="Arabia Saudí" style="width : 80px">
                                     </figure>
                                 </td>
-                            </tr>    
-                            <tr>
+                        </tr>    
+                        <tr>
                                 <td class="local" id="P6">
                                     <figure>
                                         <span class="equipo_t369">Dinamarca</span>
@@ -180,8 +178,8 @@
                                         <img src="https://e00-marca.uecdn.es/assets/sports/logos/football/png/72x72/1224.png" alt="Túnez" style="width : 80px">
                                     </figure>
                                 </td>           
-                            </tr>
-                            <tr>
+                        </tr>
+                        <tr>
                                 <td class="local" id="P7">
                                     <figure>
                                         <span class="equipo_t659">México</span>
@@ -201,8 +199,8 @@
                                         <img src="https://e00-marca.uecdn.es/assets/sports/logos/football/png/72x72/511.png" alt="Polonia" style="width : 80px">
                                     </figure>
                                 </td>
-                            </tr>            
-                            <tr>
+                        </tr>            
+                        <tr>
                                 <td class="local" id="P8">
                                     <figure>
                                         <span class="equipo_t368">Francia</span>
@@ -222,8 +220,8 @@
                                         <img src="assets/images/FotosparaProde/Australia.png" width="80" alt="Australia" style="width : 80px" >
                                     </figure>
                                 </td>
-                            </tr>           
-                            <tr>
+                        </tr>           
+                        <tr>
                                 <td class="local" id="P9">
                                     <figure>
                                         <span class="equipo_t1057">Marruecos</span>
@@ -349,54 +347,52 @@
                                     </figure>
                                 </td>
                             </tr>            
-                            <tr>
-                                <td class="local" id="P15">
+                        <tr>
+                            <td class="local" id="P15">
                                         <figure>
                                             <span class="equipo_t359">Portugal</span>
                                             <img src="https://e00-marca.uecdn.es/assets/sports/logos/football/png/72x72/359.png"
                                                 alt="Portugal" style="width : 80px">
                                         </figure>
-                                </td>
-                                <td class="resultado">
+                            </td>
+                            <td class="resultado">
                                     <span class="fecha">24/11</span> <span class="hora">13:00</span>
                                     <br><br>
                                     <input type="number" id="goles_equipo_local_P15" style="width : 30px">
                                     <span> - </span>
                                     <input type="number" id="goles_equipo_visitante_P15" style="width : 30px">
-                                </td>
-                                <td class="visitante">
+                            </td>
+                            <td class="visitante">
                                     <span class="equipo_t1219">Ghana</span>
                                     <figure>
                                         <img src="https://e00-marca.uecdn.es/assets/sports/logos/football/png/72x72/1219.png" alt="Ghana" style="width : 80px">
                                     </figure>
-                                </td>
-                            </tr>           
-                            <tr>
-                                <td class="local" id="P16">
+                            </td>
+                        </tr>           
+                        <tr>
+                            <td class="local" id="P16">
                                     <figure>
                                         <span class="equipo_t614">Brasil</span>
                                         <img src="https://e00-marca.uecdn.es/assets/sports/logos/football/png/72x72/614.png" alt="Brasil" style="width : 80px">
                                     </figure>
-                                </td>
-                                <td class="resultado">
+                            </td>
+                            <td class="resultado">
                                     <span class="fecha">24/11</span> <span class="hora">16:00</span>
                                     <br><br>
                                     <input type="number" id="goles_equipo_local_P16" style="width : 30px">
                                     <span> - </span>
                                     <input type="number" id="goles_equipo_visitante_P16" style="width : 30px">
-                                </td>
-                                <td class="visitante">
+                            </td>
+                            <td class="visitante">
                                     <span class="equipo_t364">Serbia</span>
                                     <figure>
                                         <img src="https://e00-marca.uecdn.es/assets/sports/logos/football/png/72x72/364.png" alt="Serbia" style="width : 80px">
                                     </figure>
-                                </td>
-                            </tr>           
-                        </tbody>
-                    </table>
-                </div>
-                <div class="col" style="margin-right:5px" >
-                    <table class="table table-dark table-striped" style=" width: 420px;"  id="jornada2" summary="Todos los resultados de la jornada">
+                             </td>
+                        </tr>           
+                    </tbody>
+            </table>
+            <table class="table table-dark table-striped" style=" width: 420px;"  id="jornada2" >
                         <thead>
                             <title>Jornada2</title>
                             <tr>
@@ -758,14 +754,9 @@
                                     </td>
                                 </tr>
                             </tbody>
-                        </table>
-                    </div>
-                    <!--<ACA TERMINA LA TABLA JORNADA 2>--> 
-                    <!--<ACA EMPIEZA LA TABLA JORNADA 3>-->    
-                    <div class="col"  style="margin-right:410px" >
-                        
-                        <table class="table table-dark table-striped" style=" width: 420px;" id="jornada3"
-                            summary="Todos los resultados de la jornada">
+            </table><!--<ACA TERMINA LA TABLA JORNADA 2>--> 
+            <!--<ACA EMPIEZA LA TABLA JORNADA 3>-->    
+            <table class="table table-dark table-striped" style=" width: 420px;" id="jornada3" >
                             <thead>
                                 <tr>
                                     <th scope="col">Equipo local</th>
@@ -1143,11 +1134,7 @@
                                     </td>
                                 </tr>
                             </tbody>
-                        </table>
-
-                    </div>
-                </table>
-            </div>
+            </table>
         </section>
         <div id="boton-prode" class="col-auto mbr-section-btn align-center" style="background-color: #601e1e">
             <button class="btn btn-primary display-4" onclick="enviar_resultados();" value="">Enviar Prode</button>
