--- a/Prode/frontend/prode-app/main.html
+++ b/Prode/frontend/prode-app/main.html
@@ -391,7 +391,8 @@
                              </td>
                         </tr>           
                     </tbody>
-            </table>
+            </table><!--<ACA TERMINA LA TABLA JORNADA 1>-->
+                    <!--<ACA EMPIEZA LA TABLA JORNADA 2>-->  
             <table class="table table-dark table-striped" style=" width: 420px;"  id="jornada2" >
                         <thead>
                             <title>Jornada2</title>
