--- a/Prode/frontend/prode-app/main.html
+++ b/Prode/frontend/prode-app/main.html
@@ -44,7 +44,8 @@
                 </div>
             </div>
         </nav>
-        <section data-bs-version="5.1" class="image3 cid-t9oYmfD7bT mbr-fullscreen" >
+        <section data-bs-version="5.1" class="image3 cid-t9oYmfD7bT mbr-fullscreen">
+            <Table style="width: 100%;">   
             <table class="table table-dark table-striped"  style=" width: 420px;"  id="jornada1" >
                     <thead>
                             <tr>
@@ -1135,6 +1136,7 @@
                                     </td>
                                 </tr>
                             </tbody>
+            </table>
             </table>
         </section>
         <div id="boton-prode" class="col-auto mbr-section-btn align-center" style="background-color: #601e1e">
