--- a/Prode/frontend/prode-app/tablaprueba.html
+++ b/Prode/frontend/prode-app/tablaprueba.html
@@ -33,7 +33,7 @@
         </nav>
         <br>
         <br>
-        <table class="table table-dark table-striped" style="width: 100%;" >
+        <table class="table table-dark table-striped"  >
             <tr>    
                 <th>Octavos de Final</th>
                 <th>Cuartos de final</th>
