--- a/Prode/frontend/prode-app/resultados.html
+++ b/Prode/frontend/prode-app/resultados.html
@@ -46,6 +46,8 @@
                 <a class="nav-link active" aria-current="page" style="color: white" href="fixture.html">Fixture</a>
                 <a class="nav-link" style="color: white" href="main.html">Prode</a>
                 <a class="nav-link" style="color: white" href="resultados.html">Resultados</a>
+                <a class="nav-link" style="color: white" href="preguntas.html">Preguntas Frecuentes</a>
+                <a class="nav-link" style="color: white" href="pago.html">Metodo de Pago</a>
                 <a class="nav-link" style="color: white" href="index.html">Cerrar Sesion</a>
             </div>
         </div>
