--- a/Prode/frontend/prode-app/resultados.html
+++ b/Prode/frontend/prode-app/resultados.html
@@ -36,7 +36,7 @@
   <nav class="navbar navbar-expand-lg bg-dark">
     <div class="container-fluid">
       <img src="assets/images/logo-navbar.png" style="width: 40px;" alt="">
-        <a class="navbar-brand" style="color: white">Prode8</a>
+        <span class="navbar-brand" style="color: white">Prode8</span>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
             aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -45,10 +45,10 @@
             <div class="navbar-nav">
                 <a class="nav-link active" aria-current="page" style="color: white" href="fixture.html">Fixture</a>
                 <a class="nav-link" style="color: white" href="main.html">Prode</a>
-                <a class="nav-link" style="color: white" href="resultados.html">Resultados</a>
+                <a class="nav-link" id="active" style="color: white" href="resultados.html">Resultados</a>
                 <a class="nav-link" style="color: white" href="preguntas.html">Preguntas Frecuentes</a>
-                <a class="nav-link" style="color: white" href="pago.html">Metodo de Pago</a>
-                <a class="nav-link" style="color: white" href="index.html">Cerrar Sesion</a>
+                <a class="nav-link" style="color: white" href="pago.html">Método de Pago</a>
+                <a class="nav-link" style="color: white" href="index.html">Cerrar Sesión</a>
             </div>
         </div>
     </div>
