--- a/Prode/frontend/prode-app/preguntas.html
+++ b/Prode/frontend/prode-app/preguntas.html
@@ -36,7 +36,7 @@
     <nav class="navbar navbar-expand-lg bg-dark">
         <div class="container-fluid">
             <img src="assets/images/logo-navbar.png" style="width: 40px;" alt="">
-            <a class="navbar-brand" style="color: white">Prode8</a>
+            <span class="navbar-brand" style="color: white">Prode8</span>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -46,64 +46,64 @@
                     <a class="nav-link" aria-current="page" style="color: white" href="fixture.html">Fixture</a>
                     <a class="nav-link" style="color: white" href="main.html">Prode</a>
                     <a class="nav-link" style="color: white" href="resultados.html">Resultados</a>
-                    <a class="nav-link" style="color: white" href="preguntas.html">Preguntas Frecuentes</a>
-                    <a class="nav-link" style="color: white" href="pago.html">Metodo de Pago</a>
-                    <a class="nav-link" style="color: white" href="index.html">Cerrar Sesion</a>
+                    <a class="nav-link" id="active" style="color: white" href="preguntas.html">Preguntas Frecuentes</a>
+                    <a class="nav-link" style="color: white" href="pago.html">Método de Pago</a>
+                    <a class="nav-link" style="color: white" href="index.html">Cerrar Sesión</a>
                 </div>
             </div>
         </div>
     </nav>
     <br>
 
-    <button class="accordion">¿Que es el Prode8?</button>
+    <button class="accordion">¿Qué es el Prode8?</button>
 <div class="panel">
-  <p>Es una aplicacion que te permite acertar resultados del mundial</p>
+  <p>Es una aplicación que te permite acertar resultados del mundial.</p>
 </div>
 
 
 
-<button class="accordion">¿Como se juega?</button>
+<button class="accordion">¿Cómo se juega?</button>
 <div class="panel">
-  <p>Si completas los resultados de cada uno de los partidos del mundial podes el Prode8
+  <p>Si completás los resultados de cada uno de los partidos del mundial, podés ganar el Prode8.
   </p>
 </div>
 
-<button class="accordion">¿Como puedo jugar?</button>
+<button class="accordion">¿Cómo puedo jugar?</button>
 <div class="panel">
-  <p>Completada la planilla de partidos te va a direccionar a metodos de pago y seleccionas un metodo que 
-    vos prefieras
+  <p>Completada la planilla de partidos te va a direccionar a métodos de pago y seleccionás el método que 
+    vos prefieras.
   </p>
 </div>
 
-<button class="accordion">¿Puedo completar mas de una vez?</button>
+<button class="accordion">¿Puedo completar más de una vez?</button>
 <div class="panel">
-  <p>Si, para eso seria necesario crearse una nueva cuenta</p>
+  <p>Sí, para eso sería necesario crearse una nueva cuenta.</p>
 </div>
 
-<button class="accordion">¿Que pasa si acierto todos los resultados pero no los goles exactos?</button>
+<button class="accordion">¿Qué pasa si acierto todos los resultados pero no los goles exactos?</button>
 <div class="panel">
-  <p>En ese caso, no cuenta como prode ganador, ya que para ganar el prode necesitas que todos los resultados 
-    de todos los partidos sean identicos a la realidad
+  <p>En ese caso, no cuenta como prode ganador, ya que para ganar el prode necesitás que todos los resultados 
+    de todos los partidos sean idénticos a la realidad.
   </p>
 </div>
 
-<button class="accordion">¿Si gano, como reclamo mi premio?</button>
+<button class="accordion">Si gano, ¿cómo reclamo mi premio?</button>
 <div class="panel">
-  <p>Apenas termine el muldial, vamos a comparar todos los resultados y el/los ganadores recibiran su respuesta 
-    via mail
+  <p>Apenas termine el mundial, vamos a comparar todos los resultados y las/los ganadores recibirán su respuesta 
+    vía mail.
   </p>
 </div>
 
-<button class="accordion">¿Cuanto es el premio?</button>
+<button class="accordion">¿Cuánto es el premio?</button>
 <div class="panel">
   <p>El premio es el 150% de lo invertido. <br>
-  Ejemplo: Si invertiste 5 US$, el premio sera 7,5 US$</p>
+  Ejemplo: Si invertiste 5 US$, el premio será 7,5 US$.</p>
 </div>
 <br>
 
-<button class="accordion">Si tenes mas dudas, contactanos</button>
+<button class="accordion">Si tenés mas dudas, contactános.</button>
 <div class="panel">
-  <p>Hablanos por Instagram
+  <p>Hablanos por Instagram.
     
   <a href="https://www.instagram.com/prode8_arg/"><img src="assets/images/iglogo.png" width="20px" alt=""></a></p>
 </div>
