--- a/Prode/frontend/prode-app/main2.html
+++ b/Prode/frontend/prode-app/main2.html
@@ -30,8 +30,8 @@
             </div>
         </nav>
         <br>
-        <div class="container">
-            <div class="col-4">
+        <div class="">
+            <div class= "" style="position:relative; top:23px; left:20px;  width:200px; height: 200px; float: left;"></table>">
                 <table class="table rounded table-dark table-striped table-bordered" > <!-- TABLA JORNADA 1 -->
                     <thead>
                         <tr>
@@ -1253,7 +1253,13 @@
                 </table>
             </div>    
         </div>
-       
+
+
+
+
+
+
+        
         <div class="">
             <div class="col-3">
                 <Table style="float: right">
