--- a/Prode/frontend/prode-app/main.html
+++ b/Prode/frontend/prode-app/main.html
@@ -21,8 +21,9 @@
                  </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
-                        <a class="nav-link active" aria-current="page" style="color: white" href="fixture.html">Fixture</a>
                         <a class="nav-link" style="color: white" href="main.html">Prode</a>
+                        <a class="nav-link" style="color: white" href="preguntas.html">Preguntas Frecuentes</a>
+                        <a class="nav-link" style="color: white" href="pago.html">Método de Pago</a>
                         <a class="nav-link" style="color: white" href="resultados.html">Resultados</a>
                         <a class="nav-link" style="color: white" href="index.html">Cerrar Sesion</a>
                     </div>
@@ -1083,7 +1084,7 @@
                 </tbody>    
             </table>    
         </div>
-        <div style="">
+        <div >
         <table class="table table-dark table-striped" style="width: 1100px"  > <!-- TABLA FASE FINAL -->
             <tr>    
                 <th>Octavos de Final</th>
