--- a/Prode/frontend/prode-app/preguntas.html
+++ b/Prode/frontend/prode-app/preguntas.html
@@ -55,6 +55,12 @@
     </nav>
     <br>
 
+    <div class="bg"></div>
+    <div class="bg bg2"></div>
+    <div class="bg bg3"></div>
+
+
+
     <button class="accordion">¿Qué es el Prode8?</button>
 <div class="panel">
   <p>Es una aplicación que te permite acertar resultados del mundial.</p>
