--- a/Prode/frontend/prode-app/registro.html
+++ b/Prode/frontend/prode-app/registro.html
@@ -55,7 +55,7 @@
                                 <input type="number" name="documento" id="dni" placeholder="DNI" data-form-field="phone" class="form-control" onkeypress="enterKeyPressed(event)" value="" >
                             </div>
                             <div class="col-12 col-md-auto mbr-section-btn"><button onclick="registro();" class="btn btn-secondary display-4" >Ingresar</button></div>
-                            <a href="index.html">  <button id="boton-registro" class="btn btn-primary display-4"  value="">¿Ya tenés cuenta?<br> Ingresa acá</button></a>
+                            <a id="ref-registro" href="index.html">  <button id="boton-registro" class="btn btn-primary display-4"  value="">¿Ya tenés cuenta?<br> Ingresa acá</button></a>
                         </div>
                         
                     
