--- a/Prode/frontend/prode-app/index.html
+++ b/Prode/frontend/prode-app/index.html
@@ -61,7 +61,7 @@
                             <input type="text" name="dni" id="dni" placeholder="DNI" data-form-field="dni"  class="form-control" onkeypress="enterKeyPressed(event)" value="" >
                         </div>
                         
-                        <div class="col-12 col-md-auto mbr-section-btn"><button onclick="login();"  class="btn btn-secondary display-4">Entrar</button></div>
+                        <div class="col-12 col-md-auto mbr-section-btn"><button id="login-boton" onclick="login();"  class="btn btn-secondary display-4">Entrar</button></div>
                         <a href="registro.html"> <button id="login-image" class="btn btn-primary display-4" value="">Registrate acá</button></a>
                     </div>
                     
@@ -82,7 +82,7 @@
 
 
 
-
+    <script src="https://cdn.lordicon.com/qjzruarw.js"></script>
 <script src="routes/routes.js"></script>
 <script src="framework/Sweetalert/sweetalert.min.js"></script>
 <script src="controllers/login.controller.js"></script>  
