--- a/Prode/frontend/prode-app/main.html
+++ b/Prode/frontend/prode-app/main.html
@@ -23,6 +23,7 @@
                  </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
+                        <a class="nav-link" style="color: white" href="estadisticas.html">Estadisticas</a>
                         <a class="nav-link" id="active" style="color: white" href="main.html">Prode</a>
                         <a class="nav-link" style="color: white" href="preguntas.html">Preguntas Frecuentes</a>
                         <a class="nav-link" style="color: white" href="pago.html">Método de Pago</a>
