--- a/Prode/frontend/prode-app/preguntas.html
+++ b/Prode/frontend/prode-app/preguntas.html
@@ -43,7 +43,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                    <a class="nav-link" aria-current="page" style="color: white" href="fixture.html">Fixture</a>
+                    <a class="nav-link" style="color: white" href="estadisticas.html">Estadisticas</a>
                     <a class="nav-link" style="color: white" href="main.html">Prode</a>
                     <a class="nav-link" style="color: white" href="resultados.html">Resultados</a>
                     <a class="nav-link" id="active" style="color: white" href="preguntas.html">Preguntas Frecuentes</a>
