--- a/Prode/frontend/prode-app/index.html
+++ b/Prode/frontend/prode-app/index.html
@@ -52,10 +52,10 @@
                             
                         </div>
                         <div class="col-lg-12 col-md col-12 form-group mb-3" data-for="name">
-                            <input type="text" name="name" id="usuario" placeholder="Usuario" data-form-field="name" class="form-control" value="" >
+                            <input type="text" name="usuario" id="usuario" placeholder="usuario" data-form-field="name" class="form-control" value="" >
                         </div>
                         <div class="col-lg-12 col-md col-12 form-group mb-3" data-for="clave">
-                            <input type="password" name="phone" id="clave" placeholder="Contraseña" data-form-field="phone" class="form-control" onkeypress="enterKeyPressed(event)" value="" >
+                            <input type="password" name="clave" id="clave" placeholder="Contraseña" data-form-field="phone" class="form-control" onkeypress="enterKeyPressed(event)" value="" >
                         </div>
                         <div class="col-lg-12 col-md col-12 form-group mb-3" data-for="dni">
                             <input type="text" name="dni" id="dni" placeholder="DNI" data-form-field="dni"  class="form-control" onkeypress="enterKeyPressed(event)" value="" >
