--- a/Prode/frontend/prode-app/registro.html
+++ b/Prode/frontend/prode-app/registro.html
@@ -110,7 +110,7 @@
         return false;
     }
         </script>
-        <script type="text/javascript" src="framework/particles/particles.js"></script>
-        <script type="text/javascript" src="framework/particles/demo/js/app.js"></script>
+        <!-- <script type="text/javascript" src="framework/particles/particles.js"></script>
+          <script type="text/javascript" src="framework/particles/demo/js/app.js"></script>-->
 </body>
 </html>
